--- a/WeekTwo/DayThree/more_sinatra/views/hipage.erb
+++ b/WeekTwo/DayThree/more_sinatra/views/hipage.erb
@@ -1,8 +1,7 @@
-<h1>This is my first ruuuuuby site</h1>
-<h2>homepage</h2>
+<h1>First ruby site (still)</h1>
+<h2>"Hello world"</h2>
 <ul>
 <li><a href="/">Link to home</a></li>
 <li><a href="/hi">Link to hi</a></li>
 <li><a href="/about">Link to about</a></li>
-<li><a href="/best_pizza">Link to pizza</a></li>
 </ul>
