--- a/WeekFour/DayOne/timetracking/app/views/site/home.html.erb
+++ b/WeekFour/DayOne/timetracking/app/views/site/home.html.erb
@@ -2,7 +2,8 @@
 
 <center>
 		<h4><a href="#">Ariel Deschapell</a></h4>
-		<a href="#">See your stuff</a>
+		<a href="/projects">See your stuff</a>
+
 		<br>
 		<!-- <img src="/assets/giphy.gif" alt="Hooli employees from the Silicon Valley TV show discover 'middle out' compression via crude jerking movements"/> -->
 		<%= image_tag "giphy.gif" %>
