Pushing small change

--- a/Alumni project/styles.css
+++ b/Alumni project/styles.css
@@ -57,7 +57,7 @@ input[type="text"] {
 }
 
 .profile{
-	background-color: #222;
+	background-color: #33373a;
 	border: 1px solid #f5f8fa;
 	border-radius: 7px;
 	height: 200px;
