--- a/Alumni project/styles.css
+++ b/Alumni project/styles.css
@@ -4,6 +4,7 @@ body {
 }
 
 header {
+	
 	background-color: #33373a;
 	width: 100%;
 	height: 4.5rem;
@@ -32,14 +33,18 @@ header ul li {
 	float: right;
 }
 
-h1 {
-	margin-left: 11rem;
+.results {
+	margin-left: 11.5rem;
 	padding-top: 1rem;
+}
+
+.results p {
+	padding-left: 0rem;
 }
 .advanced-search {
 	width: 100%;
 	text-align: center;
-	background-color: #ffe680;
+	background-color: #43a3e6;
 }
 
 .advanced-search ul {
