fixed concert bug

--- a/WeekFour/DayFive/concert_app/app/views/concerts/details.html.erb
+++ b/WeekFour/DayFive/concert_app/app/views/concerts/details.html.erb
@@ -3,5 +3,9 @@
 <p><%= @concert.description %> </p>
  <%= link_to 'Add Comment', new_concert_comment_path(@concert) %>
 <div class="comments">
-	<p></p>
+<% @comments.each do |comment| %>
+<p><%= comment.content %></p>
+<p><%= comment.name %> </p>
+<% end %>
+	
 </div>
