--- a/WeekSix/auth-exercise-master/app/views/users/home.html.erb
+++ b/WeekSix/auth-exercise-master/app/views/users/home.html.erb
@@ -1,5 +1,17 @@
 <h1>Hello, <%= @name %>!</h1>
 
+	<% if flash[:login_success] %>
+	<p class="login_success"><%= flash[:login_success] %></p>
+	<% end %>
+	
+	<% if flash[:admin_only] %>
+	<p class="admin_only"><%= flash[:admin_only] %></p>
+	<% end %>
+	
+
+
+
+
  <% if session[:user_id] %>
   <%= link_to "My profile", "/profile" %><br>
   <%= link_to "All profiles", "/users" %>
