--- a/WeekSix/devise/app/assets/stylesheets/main.scss
+++ b/WeekSix/devise/app/assets/stylesheets/main.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the main controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.notice {
+	background-color: lightgreen;
+	color: #333; 
+	padding: 1rem;
+}
+
+.alert {
+	background-color: red;
+	color: white;
+	padding: 1rem;
+}
