--- a/WeekSix/devise/app/views/layouts/application.html.erb
+++ b/WeekSix/devise/app/views/layouts/application.html.erb
@@ -12,16 +12,31 @@
   <header>
   <h1>Devise Example</h1>
   <nav>
-    <ul>
-      <li> <%= link_to "Sign Up", new_user_registration_path %> </li>
+
+    <% if user_signed_in? %>
+    <p>Hello, <%= current_user.first_name %>!</p>
+    <% end %>
+
+    <ul> <% if user_signed_in? %>
+      <li> <%= link_to "Logout", destroy_user_session_path, method: "delete" %>
+       </li>
+      <% else %>
       <li> <%= link_to "Login", new_user_session_path %> </li>
-      <li> <%= link_to "Logout", destroy_user_session_path, method: "delete" %> </li>
+      <li> <%= link_to "Sign Up", new_user_registration_path %> </li>
+      <% end %>
     </ul>
   </nav>
 
   </header>
+  
+    <% if notice %>
   	<p class="notice"><%= notice %></p>
+    <% end %>
+
+    <% if alert %>
     <p class="alert"><%= alert %></p>
+    <% end %>
+
     <%= yield %>
 
     <footer>
